# shmoosh

./: .gitignore  README.md  pyproject.toml
configs/: underpaint-juggernaut-sdxl-k3-qjl128-policy.json  underpaint-juggernaut-sdxl-k5-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-attn1-cross-k6-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-cross-cache-self-attn1-gated-k5-k6-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-cross-cache-self-attn1-gated70pct-k5-k6-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-cross-cache-self-attn1-gated70pct-k5-k7-noqjl-a1-a2-policy.json  underpaint-juggernaut-sdxl-up0-cross-cache-self-attn1-gated70pct-k5-k7-noqjl-a1-policy.json  underpaint-juggernaut-sdxl-up0-cross-cache-self-attn1-gated70pct-k5-k7-noqjl-policy.json  underpaint-juggernaut-sdxl-up0-cross-k5-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-cross-mid-self-late-k5-k7-noqjl-policy.json  underpaint-juggernaut-sdxl-up0-cross-mixed-bridge-k5-k6-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-cross-mixed-gated10pct-k5-k6-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-cross-mixed-gated20-k5-k6-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-cross-mixed-gated20pct-k5-k6-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-cross-mixed-gated30pct-k5-k6-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated50pct-k6-qjl128-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated50pct-k7-noqjl-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated70pct-k6-noqjl-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated70pct-k7-noqjl-byte-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated70pct-k7-noqjl-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated70pct-k7-noqjl-score-value-tf32-bk16-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated70pct-k7-noqjl-score-value-tf32-bk32-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated70pct-k7-noqjl-score-value-tf32-fused-encode-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated70pct-k7-noqjl-score-value-tf32-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-firstblocks-gated70pct-k7-noqjl-tf32-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-static-headtopk-topp95-q50-k7-noqjl-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-static-headtopk-topp95-q90-k7-noqjl-policy.json  underpaint-juggernaut-sdxl-up0-self-attn1-static-headtopk-topp98-q50-k7-noqjl-policy.json  underpaint-juggernaut-validation-1024-30step-cases.json  underpaint-juggernaut-validation-1024-cases.json  underpaint-juggernaut-validation-cases.json
docs/: 1024-policy-validation-2026-05-31.md  acceleration-backlog-2026-06-01.md  attention-budget-calibration-2026-06-02.md  attention-sparsity-oracle-2026-06-02.md  block-first-sparse-oracle-2026-06-03.md  checkpoint-2026-05-31.md  compact-k-kernel-v2-2026-06-01.md  composition-policy-2026-06-01.md  cuda-graph-probe-2026-06-02.md  direct-rotated-k-probe-2026-06-01.md  experiment-plan.md  (+37 more)
(+65 files in other folders)
