[project]
name = "turbo-d"
version = "0.1.0"
description = "Research prototypes for TurboQuant-style quantization in diffusion attention workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
diffusers = [
    "accelerate>=1.0",
    "diffusers>=0.35,<0.38",
    "pillow>=10.0",
    "safetensors>=0.4",
    "torch>=2.4",
    "transformers>=4.44,<5",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
turbo-d-attention-probe = "turbo_d.cli.attention_probe:main"
turbo-d-policy-sweep = "turbo_d.cli.policy_sweep:main"
turbo-d-sweep-captures = "turbo_d.cli.sweep_captures:main"
turbo-d-runtime-smoke = "turbo_d.cli.runtime_smoke:main"
turbo-d-image-ab-smoke = "turbo_d.cli.image_ab_smoke:main"
turbo-d-image-module-sweep = "turbo_d.cli.image_module_sweep:main"
turbo-d-image-policy-suite = "turbo_d.cli.image_policy_suite:main"
turbo-d-packed-policy-estimate = "turbo_d.cli.packed_policy_estimate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turbo_d"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
