[project]
name = "shmoosh"
version = "0.1.0"
description = "Research prototypes for TurboQuant-style quantization in diffusion attention workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
diffusers = [
    "accelerate>=1.0",
    "diffusers>=0.35,<0.38",
    "pillow>=10.0",
    "safetensors>=0.4",
    "torch>=2.4",
    "transformers>=4.44,<5",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
shmoosh-attention-probe = "shmoosh.cli.attention_probe:main"
shmoosh-policy-sweep = "shmoosh.cli.policy_sweep:main"
shmoosh-sweep-captures = "shmoosh.cli.sweep_captures:main"
shmoosh-runtime-smoke = "shmoosh.cli.runtime_smoke:main"
shmoosh-image-ab-smoke = "shmoosh.cli.image_ab_smoke:main"
shmoosh-image-module-sweep = "shmoosh.cli.image_module_sweep:main"
shmoosh-image-policy-suite = "shmoosh.cli.image_policy_suite:main"
shmoosh-image-policy-compare = "shmoosh.cli.image_policy_compare:main"
shmoosh-packed-policy-estimate = "shmoosh.cli.packed_policy_estimate:main"
shmoosh-packed-key-smoke = "shmoosh.cli.packed_key_smoke:main"
shmoosh-packed-encode-parity = "shmoosh.cli.packed_encode_parity:main"
shmoosh-packed-score-smoke = "shmoosh.cli.packed_score_smoke:main"
shmoosh-packed-attention-smoke = "shmoosh.cli.packed_attention_smoke:main"
shmoosh-self-attention-variant-bench = "shmoosh.cli.self_attention_variant_bench:main"
shmoosh-packed-attention-perf-guard = "shmoosh.cli.packed_attention_perf_guard:main"
shmoosh-attention-sparsity-oracle = "shmoosh.cli.attention_sparsity_oracle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shmoosh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
